@@ -23,23 +23,23 @@
 		</tr>
 		<tr>
 			<td class="label">###LLL:information.favoriteMusic###:</td>
-			<td class="data">###USER.favoriteMusic###</td>
+			<td class="data">###USER.favorite_music###</td>
 		</tr>
 		<tr>
 			<td class="label">###LLL:information.favoriteShows###:</td>
-			<td class="data">###USER.favoriteShows###</td>
+			<td class="data">###USER.favorite_tv_shows###</td>
 		</tr>
 		<tr>
 			<td class="label">###LLL:information.favoriteMovies###:</td>
-			<td class="data">###USER.favoriteMovies###</td>
+			<td class="data">###USER.favorite_movies###</td>
 		</tr>
 		<tr>
 			<td class="label">###LLL:information.favoriteBooks###:</td>
-			<td class="data">###USER.favoriteBooks###</td>
+			<td class="data">###USER.favorite_books###</td>
 		</tr>
 		<tr>
 			<td class="label">###LLL:information.aboutMe###:</td>
-			<td class="data">###USER.aboutMe###</td>
+			<td class="data">###USER.about_me###</td>
 		</tr>
 	</tbody>
 </table>
