@@ -1,9 +1,14 @@
 2008-08-28 Ingo Renner  <ingo@typo3.org>
 
-	* added initial user profile personal information widget skeleton
+	* added user profile personal information widget
 	* added personal information template
 	* !!! moved and renamed exceptions to make them fit naming conventions
 	* added the templating engine
+	* fixed templating view helpers, naming and minor issues
+	* added an interface for views
+	* added personal information properties to the user model and user gateway
+	* fixed the personal information html template
+	* added TS configuration for the personal information widget
 
 2008-08-27 Ingo Renner  <ingo@typo3.org>
 
